--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -8,9 +8,8 @@
 }
 
 html {
-    font-family: montserrat;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
     line-height: 1.6;
-    color: $clr2;
 }
 
 body {
@@ -18,14 +17,19 @@ body {
     margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: caveat;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0 0 0.6em;
     line-height: 1;
 }
 
-
-section, main, footer {
+section,
+main,
+footer {
     padding: 5px;
 }
 
@@ -41,7 +45,7 @@ p {
 a {
     text-decoration: none;
 }
+
 a:hover {
     text-decoration: underline;
 }
-
