--- a/src/assets/styles/basics/_forms.scss
+++ b/src/assets/styles/basics/_forms.scss
@@ -1,12 +1,11 @@
 button {
-    border:0;
-    background-color: $clr1;
-    color:whitesmoke;
+    border: 0;
     padding: 5px 10px;
     margin: 5px;
+    cursor: pointer;
 }
 
-form > * {
+form>* {
     display: block;
     width: 200px;
     margin: 10px 0px;
