--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,20 +3,15 @@
 @import "setup/functions";
 @import "setup/mixins";
 @import "setup/typography";
-
 // Basics
 @import "basics/helpers";
 @import "basics/layout";
 @import "basics/base";
 @import "basics/links";
 @import "basics/forms";
-
-
-
-
 // Components
 @import "cmps/Header";
 @import "cmps/ReviewList";
-
+@import "cmps/taskDetails";
 //Pages
 @import "pages/BoardList.scss"
