--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,11 +1,10 @@
 // Colors
-$clr1: #ce2e6c;
+$clr1: #f4f5f7;
 $clr2: #4f3a65;
 $clr3: #574f7d;
 $clr4: #95adbe;
 $clr5: #dff0ea;
 $clr6: #fff;
-
 // Breakpoints
 $mobile-breakpoint: 460px;
 $narrow-breakpoint: 720px;
