--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,5 +15,6 @@
 @import "cmps/group";
 @import "cmps/taskPreview";
 @import "cmps/taskDetails";
+@import "cmps/taskOptions";
 //Pages
 @import "pages/BoardList.scss"
