--- a/src/assets/styles/cmps/_taskPreview.scss
+++ b/src/assets/styles/cmps/_taskPreview.scss
@@ -1,12 +1,26 @@
 .task-container {
     position: relative;
-    display: none;
     display: flex;
     flex-direction: column;
     background-color: white;
     box-shadow: 0 1px 0 #091e4240;
     border-radius: 3px;
     margin-bottom: 8px;
+    cursor: pointer;
+    padding: 6px 6px 2px;
+    .task-cover {
+        .img-cover {
+            margin: 0 auto;
+            object-fit: cover;
+            width: 100%;
+            border-radius: 3px;
+        }
+        .bgc-cover {
+            height: 32px;
+            width: 100%;
+            border-radius: 3px;
+        }
+    }
     .label-list {
         display: flex;
         flex-wrap: wrap;
@@ -35,12 +49,32 @@
         > *:not(:first-child) {
             margin-left: 5%;
         }
+        .avatars {
+            display: flex;
+            .avatar {
+                width: 28px;
+                height: 28px;
+                border-radius: 50%;
+                line-height: 28px;
+                margin: 1px;
+            }
+        }
     }
     .task-options {
+        font-weight: 900;
+        border-radius: 3px;
         display: none;
         position: absolute;
+        background-color: rgba(255, 255, 255, 0.671);
+        text-align: center;
+        padding: 5px 7px 1px;
+        margin-top: 7px;
+        margin-right: 7px;
         top: 0;
         right: 0;
+    }
+    .task-options:hover {
+        background-color: rgba(136, 148, 182, 0.164);
     }
 }
 
