3rd day last commit

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import "cmps/group";
 @import "cmps/taskPreview";
 @import "cmps/taskDetails";
+@import "cmps/groupOptions";
 @import "cmps/taskOptions";
 //Pages
 @import "pages/BoardPage.scss"
