--- a/src/assets/styles/cmps/_taskPreview.scss
+++ b/src/assets/styles/cmps/_taskPreview.scss
@@ -6,8 +6,9 @@
     box-shadow: 0 1px 0 #091e4240;
     border-radius: 3px;
     margin-bottom: 8px;
+    min-height: 32px;
     cursor: pointer;
-    padding: 6px 6px 2px;
+    justify-content: center;
     .task-cover {
         .img-cover {
             margin: 0 auto;
@@ -34,10 +35,15 @@
             padding-inline: 5px;
         }
     }
-    h5 {
-        font-weight: 300;
-        margin: 0;
+    a {
+        text-decoration: none;
         margin: 0 9px 4px;
+    }
+    h5 {
+        font-weight: 400;
+        color: #00395aec;
+        text-decoration: none;
+        margin: 0;
     }
     .badges {
         margin: 0 9px 4px;
@@ -67,9 +73,8 @@
         position: absolute;
         background-color: rgba(255, 255, 255, 0.671);
         text-align: center;
-        padding: 5px 7px 1px;
-        margin-top: 7px;
-        margin-right: 7px;
+        padding: 4px 6px 1px;
+        margin: 4px;
         top: 0;
         right: 0;
     }
