--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,4 +17,5 @@
 @import "cmps/taskDetails";
 @import "cmps/taskOptions";
 //Pages
-@import "pages/BoardPage.scss"
+@import "pages/BoardPage.scss";
+@import "pages/Home.scss"
