--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -2,11 +2,6 @@
     box-sizing: border-box;
 }
 
-::selection {
-    background-color: $clr1;
-    color: $clr6;
-}
-
 html {
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
     line-height: 1.6;
@@ -29,10 +24,10 @@ h6 {
 }
 
 section,
-main,
 footer {
+    display: flex;
+    justify-content: space-around;
     padding: 5px;
-    color: white;
 }
 
 img {
