--- a/src/assets/styles/cmps/_header.scss
+++ b/src/assets/styles/cmps/_header.scss
@@ -1,33 +1,11 @@
-header {
-    background-color: $clr5;
-    padding: 10px;
+.main-header{
+    background-color: #7f7f7f;
     display: flex;
     justify-content: space-between;
-
-    .loggedin-user {
-        background-color: $clr1;
-        padding: 2px 8px;
-        border-radius: 1em;
-        align-self: flex-end;
-        color: whitesmoke;
-        span{
-            background-color: $clr2;
-            padding: 4px;
-            margin: 10px;
-            border-radius: 50%;
-        }
-    }
-    nav {
-        background-color: $clr4;
-        padding: 5px 0;
-    }
-    nav a:not(:first-child) {
-        border-top: 1px solid $clr1;
-        padding: 0 5px;
-        margin: 10px;
-    }
-    nav .active {
-        color: $clr1;
-    }
-    
+    padding-left: rem(30px);
+    padding-right: rem(30px);
+    a{color: #fff}
+    a:hover{text-decoration: none};
 }
+
+.left-header{a{padding-right: rem(10px);}}
