--- a/src/assets/styles/pages/_BoardPage.scss
+++ b/src/assets/styles/pages/_BoardPage.scss
@@ -1,4 +1,5 @@
-.board-page{
+.board-page {
+    display: block;
     padding: rem(24px);
     min-height: 100vh;
     overflow-y: auto;
@@ -6,7 +7,8 @@
     color: #fff;
     flex-grow: 1;
 }
-.board-list{
+
+.board-list {
     max-width: rem(1100px);
     margin: 0 auto;
     padding: rem(30px);
@@ -17,19 +19,47 @@
     justify-content: center;
 }
 
-.create-board{
-    position: fixed;
+.create-board {
+    padding: rem(12px);
+    font-size: 1rem;
+    line-height: rem(20px);
+    font-weight: 400;
+    background: #fff;
+    color: #000;
+    border-radius: rem(3px);
+    position: absolute;
     z-index: 1;
-    top: 50;
-    margin-left: 40vw;
-    overflow: auto;
-    background-color: rgb(21, 187, 225);
-    border: 5px solid black;
+    text-align: center;
+    justify-content: center;
+}
+
+.create-board>* {
+    width: 100%;
+}
+
+.board-background-options {
+    color: white;
+    font-size: rem(12px);
+    width: 280px;
+    display: grid;
+    grid-template-columns: repeat(3, 70px);
+    grid-gap: 10px 20px;
+    gap: 10px 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.board-background-thumb {
+    object-fit: cover;
+    width: 80%;
+    height: 80%;
+    border-radius: 7px;
+    opacity: .8;
+    cursor: pointer;
 }
 
 
-
-.board-preview{
+.board-preview {
     padding: rem(15px) rem(10px);
     width: rem(240px);
     height: rem(130px);
@@ -45,7 +75,7 @@
     background-position: center center;
 }
 
-.new-board{
+.new-board {
     padding: rem(40px) rem(10px);
     width: rem(240px);
     height: rem(130px);
@@ -54,7 +84,7 @@
     background-color: #5a5959;
 }
 
-.plus-icon{
+.plus-icon {
     width: rem(50px);
     opacity: 0.7;
     filter: invert(1);
