4th day 1st commit

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,5 +17,6 @@
 @import "cmps/taskDetails";
 @import "cmps/groupOptions";
 @import "cmps/taskOptions";
+@import "cmps/editLabels";
 //Pages
 @import "pages/BoardPage.scss"
