--- a/src/assets/styles/cmps/_boardDetails.scss
+++ b/src/assets/styles/cmps/_boardDetails.scss
@@ -57,6 +57,9 @@
                 margin: 0px;
                 border-radius: 3px;
             }
+            .add-group-add-btn:hover {
+                background-color: #0069a7;
+            }
         }
     }
 }
