--- a/src/assets/styles/cmps/_group.scss
+++ b/src/assets/styles/cmps/_group.scss
@@ -13,7 +13,7 @@
 
         h4 {
             color: #243757;
-            margin: 0px;
+            margin-top: 5px;
             padding: 9px;
         }
         .options {
@@ -83,6 +83,9 @@
                 height: 32px;
                 margin: 0px;
                 border-radius: 3px;
+            }
+            .add-task-add-btn:hover {
+                background-color: #0069a7;
             }
         }
     }
