--- a/src/assets/styles/cmps/_taskOptions.scss
+++ b/src/assets/styles/cmps/_taskOptions.scss
@@ -45,7 +45,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        button {
+        .options-btn {
             position: relative;
             color: white;
             background-color: #0000008c;
@@ -53,7 +53,7 @@
             height: 30px;
             font-size: 0.8rem;
         }
-        button:hover{          
+        .options-btn:hover{          
             background-color: #000000;
             left:10px
         }
