--- a/src/assets/styles/pages/_Home.scss
+++ b/src/assets/styles/pages/_Home.scss
@@ -1,13 +1,20 @@
-main{
+.home{ 
+    font-family: "montserrat",sans-serif;
     background-image: linear-gradient(rgba(0,0,0,.4),rgba(0,0,0,.4)),url("../../imgs/home.png");
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
+    display: block;
+    padding: 1.5rem;
+    min-height: 100vh;
+    overflow-y: auto;
+    background-color: #1a1a1a;
+    color: #fff;
+    flex-grow: 1;
 }
 
-.home{ 
-    font-family: montserrat, sans-serif;
+.home-txt-container{
     align-items: flex-start;
     color: #fff;
     margin-top: 9vh;
@@ -16,7 +23,6 @@ main{
     position: relative;
     z-index: 2;
     border-radius: 1.25rem;
-    a{text-decoration: none;}
 }
 
 .home-btn{
