--- a/src/assets/styles/cmps/_boardDetails.scss
+++ b/src/assets/styles/cmps/_boardDetails.scss
@@ -64,6 +64,10 @@
     }
 }
 .board-window {
+    box-shadow:inset 0 0 0 2000px rgba(255, 255, 255, 0.109);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
     height: 100vh;
     width: 100vw;
     z-index: 0;
