--- a/src/assets/styles/pages/_BoardPage.scss
+++ b/src/assets/styles/pages/_BoardPage.scss
@@ -68,7 +68,7 @@
     color: #fff;
     position: relative;
     text-shadow: rem(1px) rem(2px) rem(3px) #000;
-    background-image: url(../../imgs/b101.jpg);
+    // background-image: url(../../imgs/b101.jpg);
     background-color: rgb(109, 179, 242);
     background-repeat: no-repeat;
     background-size: cover;
