--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,7 +17,7 @@
 @import "cmps/taskDetails";
 @import "cmps/groupOptions";
 @import "cmps/taskOptions";
-@import "cmps/editLabels";
+@import "cmps/labelEdit";
 //Pages
 @import "pages/BoardPage.scss";
 @import "pages/Home.scss"
