--- a/src/assets/styles/cmps/_boardDetails.scss
+++ b/src/assets/styles/cmps/_boardDetails.scss
@@ -2,6 +2,7 @@
     z-index: 1;
     display: flex;
     width: fit-content;
+    margin-top: 10px;
     .add-group-toggle-btn {
         margin: 0;
         z-index: 1;
