--- a/src/assets/styles/cmps/_taskDetails.scss
+++ b/src/assets/styles/cmps/_taskDetails.scss
@@ -1,89 +1,65 @@
-.task-details {
-    background-color: $clr1;
-    background-origin: content-box;
-    padding: 0px;
-    box-sizing: border-box;
-    align-items: flex-start;
-    justify-content: space-around;
-    .window {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        z-index: 1;
-        overflow: hidden;
-        background-color: rgba(0, 0, 0, .64);
-        top: 0;
-        left: 0;
+    .task-details {
+        background-color: $clr1;
+        background-origin: content-box;
+        padding: 0px;
+        box-sizing: border-box;
         align-items: flex-start;
-        justify-content: center;
-    }
-    .card {
-        min-height: 500px;
-        width: 700px;
-        background-color: #f4f5f7;
-        border-radius: 5px;
-        position: absolute;
-        z-index: 2;
-    }
-    .cover {
-        background-color: #ffaf3f;
-        height: 80px;
-        width: 100%;
-        max-height: 80px;
-        align-items: flex-end;
-        justify-content: space-between;
-    }
-    textarea {
-        // width: 90%;
-        width: 500px;
-        height: 70px;
-        border: none;
-    }
-    .main {
-        justify-content: space-around
-    }
-    .sidebar {
-        width: 150px;
-        .btn {
-            align-items: center
-        }
-        .icon {
-            margin-right: 10px;
-        }
-        .btn:hover {
-            background-color: rgb(221, 221, 221);
-        }
-    }
-    .comments {
         justify-content: space-around;
-    }
-    .comment {
-        align-items: flex-end;
-        margin-top: 10px;
-        .avatar {
-            width: 30px;
-            height: 30px;
-            font-size: 0.8rem;
-            margin-right: 10px
+        .window {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            overflow: hidden;
+            background-color: rgba(0, 0, 0, .64);
+            top: 0;
+            left: 0;
+            align-items: flex-start;
+            justify-content: center;
         }
-    }
-    .taskIcon {
-        margin: 10px;
-    }
-    .form {
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    .modal {
-        position: relative;
-        right: -111px;
-        top: 129px;
-        border-radius: 10px;
-        z-index: 3;
-        .member {
-            background-color: #efefef;
-            height: 30px;
-            margin-bottom: 10px;
+        .card {
+            min-height: 500px;
+            width: 700px;
+            background-color: #f4f5f7;
+            border-radius: 5px;
+            position: absolute;
+            z-index: 2;
+        }
+        .cover {
+            background-color: #ffaf3f;
+            height: 80px;
+            width: 100%;
+            max-height: 80px;
+            align-items: flex-end;
+            justify-content: space-between;
+        }
+        textarea {
+            // width: 90%;
+            width: 500px;
+            height: 70px;
+            border: none;
+        }
+        .main {
+            justify-content: space-around
+        }
+        .sidebar {
+            width: 150px;
+            .btn {
+                align-items: center
+            }
+            .icon {
+                margin-right: 10px;
+            }
+            .btn:hover {
+                background-color: rgb(221, 221, 221);
+            }
+        }
+        .comments {
+            justify-content: space-around;
+        }
+        .comment {
+            align-items: flex-end;
+            margin-top: 10px;
             .avatar {
                 width: 30px;
                 height: 30px;
@@ -91,5 +67,42 @@
                 margin-right: 10px
             }
         }
+        .taskIcon {
+            margin: 10px;
+        }
+        .form {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        .modal {
+            position: relative;
+            right: -111px;
+            top: 129px;
+            border-radius: 10px;
+            z-index: 3;
+            .member {
+                background-color: #efefef;
+                height: 30px;
+                margin-bottom: 10px;
+                .avatar {
+                    width: 30px;
+                    height: 30px;
+                    font-size: 0.8rem;
+                    margin-right: 10px;
+                }
+            }
+        }
+        .members {
+            margin-bottom: 10px;
+        }
+        .labels .label {
+            font-size: 0.8rem;
+            border-radius: 5px;
+            margin: 3px;
+            color: white;
+            font-weight: 600;
+            padding-inline: 5px;
+            width: fit-content
+        }
+        .label {}
     }
-}
