--- a/src/assets/styles/cmps/_group.scss
+++ b/src/assets/styles/cmps/_group.scss
@@ -10,11 +10,14 @@
         height: 37px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
         h4 {
             color: #243757;
-            margin-top: 5px;
+            margin-top: 10px;
             padding: 9px;
+            font-weight: 600;
+            font-size: 1rem;
         }
         .options {
             background-color: #ebecf0;
@@ -34,8 +37,26 @@
     }
     .task-list {
         width: 265px;
-        padding: 6px 8px;
+        padding: 6px 6px;
         padding-bottom: 0;
+        max-height: 75vh;
+        overflow-y: auto;
+        overflow-x: hidden;
+        margin-right: 5px;
+        &::-webkit-scrollbar {
+            width: 8px;
+        }
+        &::-webkit-scrollbar-thumb {
+            border-radius: 3px;
+            box-shadow: inset 0 0 6px #00000046;
+        }
+        &::-webkit-scrollbar-track {
+            border-radius: 10px;
+            background: rgba(9,30,66,.041);
+        }
+        &::-webkit-scrollbar-track-piece {
+            background: rgba(190,194,205,.548);
+        }
     }
     .add-task-toggle-btn {
         background-color: #ebecf0;
