--- a/src/assets/styles/cmps/_taskDetails.scss
+++ b/src/assets/styles/cmps/_taskDetails.scss
@@ -35,7 +35,7 @@
         }
         textarea {
             // width: 90%;
-            width: 500px;
+            width: 300px;
             height: 70px;
             border: none;
         }
@@ -102,7 +102,44 @@
             color: white;
             font-weight: 600;
             padding-inline: 5px;
-            width: fit-content
+            min-width: 50px;
+            width: fit-content;
         }
-        .label {}
+        .label {
+            font-size: 0.8rem;
+            border-radius: 5px;
+            margin: 3px;
+            color: white;
+            font-weight: 600;
+            padding-inline: 5px;
+            width: 70px;
+            text-align: center;
+        }
+        .labels-list {
+            right: -135px;
+            top: 173px;
+        }
+        .edit-label-container {
+            position: fixed;
+        }
+        .dates-form {
+            z-index: 3;
+            background-color: #efefef;
+            flex-wrap: wrap;
+            position: relative;
+            right: -72px;
+            top: 255.7px;
+            border-radius: 5px;
+            padding: 5px;
+            .dates {
+                width: 220px;
+                margin-right: 5px;
+                margin-left: 5px;
+            }
+        }
+        .preview-img {
+            margin-top: 5px;
+            width: 80%;
+            border: 1 px solid black;
+        }
     }
