--- a/src/assets/styles/cmps/_taskPreview.scss
+++ b/src/assets/styles/cmps/_taskPreview.scss
@@ -38,31 +38,39 @@
     a {
         text-decoration: none;
         margin: 0 9px 4px;
-    }
-    h5 {
-        font-weight: 400;
-        color: #00395aec;
-        text-decoration: none;
-        margin: 0;
-    }
-    .badges {
-        margin: 0 9px 4px;
-        display: flex;
-        > * {
-            font-size: 1rem;
-            color: #6d798e;
+        h5 {
+            font-weight: 400;
+            color: #00395aec;
+            text-decoration: none;
+            margin: 0;
         }
-        > *:not(:first-child) {
-            margin-left: 5%;
-        }
-        .avatars {
+        .badges {
             display: flex;
-            .avatar {
-                width: 28px;
-                height: 28px;
-                border-radius: 50%;
-                line-height: 28px;
-                margin: 1px;
+            align-items: center;
+            justify-content: space-between;
+            > * {
+                color: #6d798e;
+                margin-top: 5px;
+                margin-right: 5px;
+                font-size: 12px;
+                height: fit-content;
+            }
+            .dew-date {
+                background-color: #eb5a46;
+                color: white;
+                border-radius: 3px;
+                padding: 1px 2px;
+            }
+            .avatars {
+                display: flex;
+                .avatar {
+                    justify-items: end;
+                    width: 28px;
+                    height: 28px;
+                    border-radius: 50%;
+                    line-height: 28px;
+                    margin: 1px;
+                }
             }
         }
     }
