--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -14,6 +14,11 @@ body {
     font-size: rem(18px);
     margin: 0;
     background-color: #1a1a1a;
+    height: 100vh;
+}
+
+.root, .app, main, .home, .board-page{
+    height: 100%;
 }
 
 h1,
