--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -17,7 +17,7 @@ body {
     height: 100vh;
 }
 
-.root, .app, main, .home, .board-page{
+#root, .app, main, .home, .board-page{
     height: 100%;
 }
 
