--- a/src/assets/styles/pages/_BoardPage.scss
+++ b/src/assets/styles/pages/_BoardPage.scss
@@ -67,7 +67,6 @@
     color: #fff;
     position: relative;
     text-shadow: rem(1px) rem(2px) rem(3px) #000;
-    // background-image: url(../../imgs/b101.jpg);
     background-color: rgb(109, 179, 242);
     background-repeat: no-repeat;
     background-size: cover;
@@ -81,6 +80,9 @@
     border-radius: rem(10px);
     text-align: center;
     background-color: #5a5959;
+    img {
+        border-radius: rem(10px);
+    }
 }
 
 .plus-icon {
