side bar commitush

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -18,6 +18,8 @@
 @import "cmps/groupOptions";
 @import "cmps/taskOptions";
 @import "cmps/labelEdit";
+@import "cmps/sideBar";
+@import "cmps/bgPickList";
 //Pages
 @import "pages/BoardPage.scss";
 @import "pages/Home.scss"
