--- a/src/assets/styles/cmps/_boardDetails.scss
+++ b/src/assets/styles/cmps/_boardDetails.scss
@@ -1,3 +1,11 @@
+.open-side-bar-btn{
+    background-color: magenta;
+    position: fixed;
+    top: 25;
+    right: 0;
+    z-index: 2;
+}
+
 .board-container {
     z-index: 1;
     display: flex;
