--- a/src/assets/styles/cmps/_bgPickList.scss
+++ b/src/assets/styles/cmps/_bgPickList.scss
@@ -12,7 +12,10 @@
         border-radius: 10px;
         opacity: 1;
         cursor: pointer;
-        background-color: rgb(0, 0, 0);
+        background-color: rgb(0, 0, 0);  
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
         &:hover{
             opacity: 0.5;
         }
