--- a/src/assets/styles/cmps/_bgPickList.scss
+++ b/src/assets/styles/cmps/_bgPickList.scss
@@ -1,11 +1,11 @@
 .picks {
     display: grid;
-    margin-top: 10px;
+    margin-top: 20px;
     grid-template-columns: repeat(2, 120px);
-    grid-gap: 15px;
     gap: 15px;
     height: 100%;
     .pick {
+        align-self: center;
         width: 100%;
         height: 75px;
         object-fit: cover;
