--- a/src/assets/styles/pages/_BoardPage.scss
+++ b/src/assets/styles/pages/_BoardPage.scss
@@ -59,6 +59,10 @@
 
 
 .board-preview {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
     padding: rem(15px) rem(10px);
     width: rem(240px);
     height: rem(130px);
@@ -71,6 +75,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    h3{
+        align-self: center;
+    }
 }
 
 .new-board {
@@ -89,4 +96,39 @@
     width: rem(50px);
     opacity: 0.7;
     filter: invert(1);
+}
+
+.delete-button{
+    opacity: 0;
+}
+
+.board-preview:hover > .delete-button{
+    opacity: 100;
+}
+
+.delete-modal{
+    position: fixed;
+    background: #fff;
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content{
+    // padding-bottom: rem(40px);
+    display: flex;
+    flex-direction: column;
+    // justify-content: space-between;
+    color: #000;
+    text-shadow: none;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%; /* Could be more or less, depending on screen size */
 }
