--- a/src/assets/styles/cmps/_group.scss
+++ b/src/assets/styles/cmps/_group.scss
@@ -42,7 +42,7 @@
         max-height: 75vh;
         overflow-y: auto;
         overflow-x: hidden;
-        margin-right: 5px;
+        margin-inline: 5px;
         &::-webkit-scrollbar {
             width: 8px;
         }
