--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "cmps/labelEdit";
 @import "cmps/sideBar";
 @import "cmps/bgPickList";
+@import "cmps/membersList";
 //Pages
 @import "pages/BoardPage.scss";
 @import "pages/Home.scss"
