--- a/src/assets/styles/cmps/_taskDetails.scss
+++ b/src/assets/styles/cmps/_taskDetails.scss
@@ -140,7 +140,7 @@
         }
         .preview-img {
             margin-top: 5px;
-            width: 80%;
+            width: 200px;
             border: 1 px solid black;
             margin-right: 5px;
             align-self: baseline;
