--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -6,7 +6,8 @@
 }
 
 html {
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
+        sans-serif;
     line-height: 1.6;
 }
 
@@ -15,9 +16,27 @@ body {
     margin: 0;
     background-color: #1a1a1a;
     height: 100vh;
+    overflow-y: hidden;
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        box-shadow: inset 0 0 30px #66adff;
+    }
+    &::-webkit-scrollbar-track {
+        background: rgba(29, 105, 238, 0.041);
+    }
+    &::-webkit-scrollbar-track-piece {
+        background: #e7ebff;
+    }
 }
 
-#root, .app, main, .home, .board-page{
+#root,
+.app,
+main,
+.home,
+.board-page {
     height: 100%;
 }
 
