--- a/src/assets/styles/cmps/_group.scss
+++ b/src/assets/styles/cmps/_group.scss
@@ -5,57 +5,124 @@
     margin-inline: 5px;
     background-color: #ebecf0;
     border-radius: 5px;
+    max-height: 100vh;
     .header {
-        width: 265px;
-        height: 37px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        width: 100%;
+        height: 38px;
+        display: grid;
+        margin-top: 3px;
+        grid-template-columns: auto auto;
+        align-content: center;
 
-        h4 {
+        .title {
+            padding-top: 3px;
             color: #243757;
-            margin-top: 10px;
-            padding: 9px;
+            padding-left: 6px;
             font-weight: 600;
             font-size: 1rem;
+            margin: 0;
         }
         .options {
+            justify-self: end;
             background-color: #ebecf0;
             color: #6d798e;
             padding: 0px;
-            margin: 9px;
+            margin: 0px;
             width: 32px;
             height: 32px;
             border-radius: 3px;
-
+            margin-right: 6px;
             font-weight: 900;
         }
         .options:hover {
             background-color: rgba(136, 148, 182, 0.164);
             color: #243757;
         }
+        form {
+            padding: 6px 6px;
+            margin-inline: 5px;
+            margin-top:6px;
+            input {
+                outline: none;
+                border: none;
+                border-radius: 3px;
+                background-color: #fff;
+                color: #00395aec;
+                box-shadow: inset 0 0 0 2px #0079bf;
+                margin: 0;
+                width: 100%;
+                padding: 8px 12px;
+
+                &::placeholder {
+                    opacity: 1;
+                    color: #00395aec;
+                }
+            }
+        }
     }
     .task-list {
         width: 265px;
-        padding: 6px 6px;
+        padding-inline: 3px;
         padding-bottom: 0;
-        max-height: 75vh;
+        max-height: 80vh;
         overflow-y: auto;
         overflow-x: hidden;
-        margin-inline: 5px;
+        margin-inline: 3px;
+        margin-top: 3px;
         &::-webkit-scrollbar {
-            width: 8px;
+            width:6px;
         }
         &::-webkit-scrollbar-thumb {
             border-radius: 3px;
             box-shadow: inset 0 0 6px #00000046;
         }
         &::-webkit-scrollbar-track {
-            border-radius: 10px;
-            background: rgba(9,30,66,.041);
+            border-radius: 3px;
+            background: rgba(9, 30, 66, 0.041);
         }
         &::-webkit-scrollbar-track-piece {
-            background: rgba(190,194,205,.548);
+            border-radius: 3px;
+            background: rgba(190, 194, 205, 0.548);
+        }
+        .add-task-form {
+            padding-top: 0;
+            padding-bottom: 6px;
+            .task-title-input {
+                outline: none;
+                border: none;
+                color: #00395aec;
+                box-shadow: 0 1px 0 #091e4240;
+                border-radius: 3px;
+                width: 100%;
+                margin: 0;
+                padding: 8px 12px;
+                resize: none;
+            }
+            .add-task-controls {
+                height: 32px;
+                margin: 8px 0px 0px 0px;
+                display: flex;
+                .add-task-close-btn {
+                    padding: 0;
+                    margin: 0;
+                    width: 32px;
+                    font-size: 1.1rem;
+                    color: #42526ec5;
+                }
+                .add-task-close-btn:hover {
+                    color: #2e3542;
+                }
+                .add-task-add-btn {
+                    background-color: #0079bf;
+                    color: white;
+                    height: 32px;
+                    margin: 0px;
+                    border-radius: 3px;
+                }
+                .add-task-add-btn:hover {
+                    background-color: #0069a7;
+                }
+            }
         }
     }
     .add-task-toggle-btn {
@@ -70,44 +137,5 @@
         background-color: rgba(136, 148, 182, 0.164);
         color: #3f465c;
     }
-    .add-task-form {
-        padding: 6px 8px;
-        padding-top: 0;
-        .task-title-input {
-            outline: none;
-            border: none;
-            color: #00395aec;
-            box-shadow: 0 1px 0 #091e4240;
-            border-radius: 3px;
-            width: 100%;
-            margin: 0;
-            padding: 8px 12px;
-            resize: none;
-        }
-        .add-task-controls {
-            height: 32px;
-            margin: 8px 0px 0px 0px;
-            display: flex;
-            .add-task-close-btn {
-                padding: 0;
-                margin: 0;
-                width: 32px;
-                font-size: 1.1rem;
-                color: #42526ec5;
-            }
-            .add-task-close-btn:hover {
-                color: #2e3542;
-            }
-            .add-task-add-btn {
-                background-color: #0079bf;
-                color: white;
-                height: 32px;
-                margin: 0px;
-                border-radius: 3px;
-            }
-            .add-task-add-btn:hover {
-                background-color: #0069a7;
-            }
-        }
-    }
+   
 }
