--- a/src/assets/styles/cmps/_groupOptions.scss
+++ b/src/assets/styles/cmps/_groupOptions.scss
@@ -1,5 +1,14 @@
+.group-options-window {
+    z-index: 98;
+    position: fixed;
+    background-color: #00000088;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+}
 .group-options-container {
-    z-index: 5;
+    z-index: 99;
     position: absolute;
     display: flex;
     top: 40px;
