--- a/src/assets/styles/cmps/_labelEdit.scss
+++ b/src/assets/styles/cmps/_labelEdit.scss
@@ -37,15 +37,20 @@
         }
         .label-title {
             color: #fff6f6;
-            display: flex;
-            align-items: center;
             margin: 0px 5px 5px 5px;
             width: 244px;
             height: 32px;
             padding: 6px 12px;
             min-height: 20px;
             border-radius: 3px;
+            align-content: center;
             cursor: pointer;
+            display: grid;
+            grid-template-columns:auto 50px;
+            svg {
+                align-self: center;
+                justify-self: flex-end;
+            }
         }
         .open-edit-label-btn {
             margin: 0 0 4px;
