--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,7 +11,6 @@
 @import "basics/forms";
 // Components
 @import "cmps/Header";
-@import "cmps/boardDetails";
 @import "cmps/group";
 @import "cmps/taskPreview";
 @import "cmps/taskDetails";
@@ -22,5 +21,6 @@
 @import "cmps/bgPickList";
 @import "cmps/membersList";
 //Pages
-@import "pages/BoardPage.scss";
-@import "pages/Home.scss"
+@import "pages/BoardDetails";
+@import "pages/BoardPage";
+@import "pages/Home"
