--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -22,7 +22,7 @@ body {
     }
     &::-webkit-scrollbar-thumb {
         border-radius: 10px;
-        box-shadow: inset 0 0 30px #66adff;
+        box-shadow: inset 0 0 10px #414a55;
     }
     &::-webkit-scrollbar-track {
         background: rgba(29, 105, 238, 0.041);
