--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -21,6 +21,7 @@
 @import "cmps/sideBar";
 @import "cmps/bgPickList";
 @import "cmps/membersList";
+@import "cmps/boardHeader";
 //Pages
 @import "pages/BoardPage.scss";
 @import "pages/Home.scss"
