--- a/src/assets/styles/cmps/_group.scss
+++ b/src/assets/styles/cmps/_group.scss
@@ -6,6 +6,7 @@
     background-color: #ebecf0;
     border-radius: 5px;
     max-height: 100vh;
+    width: 265px;
     .header {
         width: 100%;
         height: 38px;
@@ -64,7 +65,7 @@
         width: 265px;
         padding-inline: 3px;
         padding-bottom: 0;
-        max-height: 78vh;
+        max-height: 70vh;
         overflow-y: auto;
         overflow-x: hidden;
         margin-inline: 3px;
