--- a/src/assets/styles/cmps/_group.scss
+++ b/src/assets/styles/cmps/_group.scss
@@ -6,7 +6,7 @@
     background-color: #ebecf0;
     border-radius: 5px;
     max-height: 100vh;
-    width: 265px;
+    width: fit-content;
     .header {
         width: 100%;
         height: 38px;
