--- a/src/assets/styles/cmps/_taskPreview.scss
+++ b/src/assets/styles/cmps/_taskPreview.scss
@@ -56,7 +56,7 @@
             justify-content: space-between;
             margin-top: 7px;
             margin-bottom: 3px;
-            > * {
+            >* {
                 color: #6d798e;
                 margin-right: 5px;
                 font-size: 12px;
@@ -67,6 +67,12 @@
                 color: white;
                 border-radius: 3px;
                 padding: 1px 2px;
+                align-items: center;
+                .clock {
+                    width: 15px;
+                    align-self: baseline;
+                    margin-right: 3px;
+                }
             }
             .avatars {
                 display: flex;
