--- a/src/assets/styles/cmps/_group.scss
+++ b/src/assets/styles/cmps/_group.scss
@@ -13,7 +13,7 @@
         display: grid;
         margin-top: 3px;
         grid-template-columns: auto auto;
-        align-content: center;
+        align-items: baseline;
 
         .title {
             padding-top: 3px;
@@ -41,8 +41,7 @@
         }
         form {
             padding: 6px 6px;
-            margin-inline: 5px;
-            margin-top:6px;
+            margin:0px;
             input {
                 outline: none;
                 border: none;
@@ -52,7 +51,7 @@
                 box-shadow: inset 0 0 0 2px #0079bf;
                 margin: 0;
                 width: 100%;
-                padding: 8px 12px;
+                padding: 4px 3px;
 
                 &::placeholder {
                     opacity: 1;
@@ -129,10 +128,11 @@
     .add-task-toggle-btn {
         background-color: #ebecf0;
         color: #6d798e;
-        padding: 6px 8px;
-        margin: 0px 9px 6px;
+        padding: 6px 9px;
+        margin: 0px 6px 6px;
         border-radius: 3px;
         height: 35px;
+        text-align: left;
     }
     .add-task-toggle-btn:hover {
         background-color: rgba(136, 148, 182, 0.164);
