--- a/src/assets/styles/cmps/_groupOptions.scss
+++ b/src/assets/styles/cmps/_groupOptions.scss
@@ -21,15 +21,35 @@
     padding: 10px;
     box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
     text-decoration: none;
-    .title {
-        color: #243757;
-        text-align: center;
-        border-bottom: 0.2px solid #0b2450ba;
+    > *:not(:first-child) {
+        padding: 10px 0px 10px 0px;
+        margin: 0px;
     }
-    .devider {
-        width: 260px;
-        border: 0.2px solid #041e4d7a;
-        border-collapse: collapse;
+    .group-options-header {
+        width: 100%;
+        display: flex;
+        border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
+        justify-content: space-around;
+        align-items: baseline;
+        padding-bottom: 10px;
+        .title {
+            line-height: 0.9;
+            flex-grow: 1;
+            color: #243757;
+            font-size: 1.2rem;
+            text-align: center;
+            flex-grow: 1;
+        }
+        .close-group-options-btn {
+            margin: 0;
+            padding: 0;
+            color: #233655;
+            background-color: transparent;
+            border: none;
+            font-size: 1.1rem;
+            cursor: pointer;
+            outline: none;
+        }
     }
     button {
         text-align: left;
@@ -39,11 +59,5 @@
     button:hover {
         background-color: rgba(0, 0, 0, 0.068);
     }
-    .close-group-options-btn {
-        position: absolute;
-        top: 9px;
-        right: 6px;
-        padding: 4px;
-        
-    }
+
 }
