--- a/src/assets/styles/cmps/_sideBar.scss
+++ b/src/assets/styles/cmps/_sideBar.scss
@@ -8,7 +8,7 @@
     z-index: 98;
 }
 .side-bar {
-    padding: 0px 20px 20px 20px;
+    padding: 0px 25px 25px 25px;
     background-color: #f4f5f7;
     width: 305px;
     display: flex;
@@ -26,7 +26,8 @@
         display: flex;
         border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
         justify-content: space-around;
-        padding: 10px;
+        padding-block: 10px;
+        align-items: baseline;
         .title {
             line-height: 0.9;
             flex-grow: 1;
@@ -43,8 +44,12 @@
             font-size: 0.9rem;
             cursor: pointer;
             outline: none;
+            padding: 0;
+            margin: 0;
         }
         .close-side-bar-btn {
+            margin: 0;
+            padding: 0;
             color: #233655;
             background-color: transparent;
             border: none;
