--- a/src/assets/styles/cmps/_taskOptions.scss
+++ b/src/assets/styles/cmps/_taskOptions.scss
@@ -10,7 +10,8 @@
 
 .task-options-container {
     position: fixed;
-    top: 50px;
+    left: 100px;
+    top: 100px;
     z-index: 100;
     display: flex;
     padding: 20px;
