--- a/frontend/src/assets/styles/main.scss
+++ b/frontend/src/assets/styles/main.scss
@@ -21,6 +21,7 @@
 @import "cmps/bgPickList";
 @import "cmps/membersList";
 @import "cmps/boardHeader";
+@import "cmps/dates";
 //Pages
 @import "pages/BoardDetails";
 @import "pages/BoardPage";
