--- a/frontend/src/assets/styles/cmps/_taskDetails.scss
+++ b/frontend/src/assets/styles/cmps/_taskDetails.scss
@@ -10,7 +10,7 @@
             position: fixed;
             width: 100%;
             height: 100%;
-            z-index: 1;
+            z-index: 2;
             overflow: hidden;
             background-color: rgba(0, 0, 0, .64);
             top: 0;
@@ -105,21 +105,21 @@
             width: 70px;
             text-align: center;
         }
-        .dates-form {
-            z-index: 3;
-            background-color: #efefef;
-            flex-wrap: wrap;
-            position: absolute;
-            right: 293px;
-            top: 288.7px;
-            border-radius: 5px;
-            padding: 5px;
-            .dates {
-                width: 220px;
-                margin-right: 5px;
-                margin-left: 5px;
-            }
-        }
+        // .dates-form {
+        //     z-index: 3;
+        //     background-color: #efefef;
+        //     flex-wrap: wrap;
+        //     position: absolute;
+        //     right: 293px;
+        //     top: 288.7px;
+        //     border-radius: 5px;
+        //     padding: 5px;
+        //     .dates {
+        //         width: 220px;
+        //         margin-right: 5px;
+        //         margin-left: 5px;
+        //     }
+        // }
         .preview-img {
             margin-top: 5px;
             width: 200px;
