--- a/frontend/src/assets/styles/main.scss
+++ b/frontend/src/assets/styles/main.scss
@@ -25,4 +25,5 @@
 //Pages
 @import "pages/BoardDetails";
 @import "pages/BoardPage";
-@import "pages/Home"
+@import "pages/Home";
+@import "pages/LoginSignup"
