--- a/frontend/src/assets/styles/cmps/_sideBar.scss
+++ b/frontend/src/assets/styles/cmps/_sideBar.scss
@@ -92,7 +92,7 @@
         .activities-list {
             color: #172b4d;
             overflow-y: auto;
-            height: 56%;
+            height: 76vh;
             margin-bottom: 50px;
             &::-webkit-scrollbar {
                 width:6px;
