--- a/frontend/src/assets/styles/cmps/_taskOptions.scss
+++ b/frontend/src/assets/styles/cmps/_taskOptions.scss
@@ -44,11 +44,11 @@
         }
     }
     .options-btns {
-        margin-left: 15px;
+        // margin-left: 15px;
         display: flex;
         flex-direction: column;
         .options-btn {
-            margin: 0 0 15px 8px;
+            margin: 0 0 15px 5px;
             padding: 6px 12px 6px 8px;
             position: relative;
             color: white;
