--- a/frontend/src/assets/styles/cmps/_group.scss
+++ b/frontend/src/assets/styles/cmps/_group.scss
@@ -34,6 +34,7 @@
             margin-right: 6px;
             height: fit-content;
             .group-options-svg{
+                margin-inline: 5px;
                 display: flex;
                 height: 32px;
             }
