--- a/frontend/src/assets/styles/cmps/_header.scss
+++ b/frontend/src/assets/styles/cmps/_header.scss
@@ -12,14 +12,24 @@
     > *:not(:first-child) {
         margin-left: 30px;
     }
-    .logo-header{
+    .logo-header {
         justify-self: center;
         margin: 0;
     }
-    .login-link-header{
+    .login-link-header {
         justify-self: end;
+        display: flex;
         padding: 0px 5px 0px 0px;
         margin: 0px 5px 0px 0px;
+        align-items: center;
+        .logged-in-user-avatar {
+            height: 25px;
+            width: 25px;
+            font-size: 0.9rem;
+            margin-right: 7px;
+            position: relative;
+            top: 1.5px;
+        }
     }
 
     a {
