--- a/frontend/src/assets/styles/cmps/_taskOptions.scss
+++ b/frontend/src/assets/styles/cmps/_taskOptions.scss
@@ -56,6 +56,15 @@
             width: 150px;
             height: 30px;
             font-size: 0.8rem;
+            display: grid;
+            grid-template-columns: 20px auto;
+            align-items: center;
+            justify-content: start;
+            .svg {
+                font-size: 0.8rem;
+                margin-right: 10px;
+            }
+ 
         }
         .options-btn:hover {
             background-color: #000000;
