--- a/frontend/src/assets/styles/pages/_BoardPage.scss
+++ b/frontend/src/assets/styles/pages/_BoardPage.scss
@@ -95,14 +95,21 @@
     .delete-button {
         position: absolute;
         background-color: rgba(0, 0, 0, 0.219);
-        opacity: 0;
+        // opacity: 0;
         color:white;
         border-radius: 3px;
         margin: 0px 0px 10px 0px;
         padding: 5px;
         bottom: 0;
+        display: flex;
+        align-items: center;
+        .delete-board-svg{
+            display: flex;
+            font-size: 1rem;
+            margin-bottom: 1px;
+        }
         &:hover{
-            background-color: rgba(0, 0, 0, 0.356);
+            background-color: rgba(0, 0, 0, 0.575);
         }
     }
     .delete-board-window {
