--- a/frontend/src/assets/styles/pages/_BoardPage.scss
+++ b/frontend/src/assets/styles/pages/_BoardPage.scss
@@ -26,11 +26,6 @@
     max-width: rem(1100px);
     margin: 0 auto;
     padding: rem(30px);
-    display: grid;
-    grid-template-columns: repeat(auto-fill, rem(250px));
-    grid-gap: rem(20px) rem(10px);
-    gap: rem(20px) rem(10px);
-    justify-content: center;
 }
 
 .create-board {
@@ -47,7 +42,7 @@
     justify-content: center;
 }
 
-.create-board > * {
+.create-board>* {
     width: 100%;
 }
 
@@ -96,19 +91,19 @@
         position: absolute;
         background-color: rgba(0, 0, 0, 0.219);
         opacity: 0;
-        color:white;
+        color: white;
         border-radius: 3px;
         margin: 0px 0px 10px 0px;
         padding: 5px;
         bottom: 0;
         display: flex;
         align-items: center;
-        .delete-board-svg{
+        .delete-board-svg {
             display: flex;
             font-size: 1rem;
             margin-bottom: 1px;
         }
-        &:hover{
+        &:hover {
             background-color: rgba(0, 0, 0, 0.575);
         }
     }
@@ -152,7 +147,7 @@
                 display: flex;
                 justify-content: space-around;
                 margin-bottom: 20px;
-                > * {
+                >* {
                     margin: 0;
                     border-radius: 3px;
                     padding: 10px 20px;
@@ -160,14 +155,14 @@
                 .delete-board-btn {
                     background-color: #eb5a46;
                     color: white;
-                    &:hover{
+                    &:hover {
                         opacity: 0.8;
                     }
                 }
                 .cancel-delete-board-btn {
                     background-color: #0279bf;
                     color: white;
-                    &:hover{
+                    &:hover {
                         opacity: 0.8;
                     }
                 }
@@ -194,23 +189,27 @@
     filter: invert(1);
 }
 
-
-
-.board-preview:hover > .delete-button {
+.board-preview:hover>.delete-button {
     opacity: 100;
 }
 
 .delete-modal {
     position: fixed;
     background: #fff;
-    z-index: 1; /* Sit on top */
+    z-index: 1;
+    /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
 }
 
 .modal-content {
@@ -221,8 +220,10 @@
     color: #000;
     text-shadow: none;
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto;
+    /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 30%; /* Could be more or less, depending on screen size */
+    width: 30%;
+    /* Could be more or less, depending on screen size */
 }
