--- a/frontend/src/assets/styles/cmps/_taskOptions.scss
+++ b/frontend/src/assets/styles/cmps/_taskOptions.scss
@@ -26,6 +26,8 @@
         flex-direction: column;
         justify-content: space-between;
         .new-title-input {
+            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
+            sans-serif;
             padding: 20px;
             outline: none;
             border-radius: 5px;
