--- a/frontend/src/assets/styles/cmps/_header.scss
+++ b/frontend/src/assets/styles/cmps/_header.scss
@@ -9,8 +9,11 @@
     opacity: 0.75;
     align-items: center;
 
-    > *:not(:first-child) {
-        margin-left: 30px;
+    > *{
+        margin-left: 10px;
+        background-color: rgba(255, 255, 255, 0.151);
+        border-radius: 3px;
+        padding: 2px 10px;
     }
     .home-link-header{
         display: flex;
