--- a/frontend/src/assets/styles/cmps/_group.scss
+++ b/frontend/src/assets/styles/cmps/_group.scss
@@ -1,22 +1,24 @@
+.group:first-of-type{
+    margin-left: 6px;
+}
 .group {
     display: flex;
     position: relative;
     flex-direction: column;
-    margin-inline: 5px;
+    margin-inline: 3px;
     background-color: #ebecf0;
     border-radius: 5px;
     max-height: 100vh;
     width: fit-content;
     .header {
+        padding-block: 6px;
         width: 100%;
-        height: 38px;
+        height: fit-content;
         display: grid;
-        margin-top: 3px;
         grid-template-columns: auto auto;
-        align-items: baseline;
+        align-items: center;
 
         .title {
-            padding-top: 3px;
             color: #243757;
             padding-left: 6px;
             font-weight: 600;
@@ -25,6 +27,9 @@
         }
         .options {
             justify-self: end;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             align-self: center;
             background-color: #ebecf0;
             color: #6d798e;
@@ -72,7 +77,6 @@
         overflow-y: auto;
         overflow-x: hidden;
         margin-inline: 3px;
-        margin-top: 3px;
         &::-webkit-scrollbar {
             width:6px;
         }
