--- a/frontend/src/assets/styles/cmps/_labelEdit.scss
+++ b/frontend/src/assets/styles/cmps/_labelEdit.scss
@@ -11,21 +11,28 @@
     box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
     text-decoration: none;
     .edit-labels-header {
+        width: 100%;
         display: flex;
-        justify-content: space-between;
         border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
+        justify-content: space-around;
+        padding-block: 5px;
+        align-items: center;
         .title {
+            line-height: 0.9;
+            flex-grow: 1;
             color: #243757;
             font-size: 1.2rem;
-            padding-top: 0.5rem;
             text-align: center;
             flex-grow: 1;
         }
         .close-edit-labels-btn {
+            margin: 0;
+            padding: 0;
             color: #233655;
             background-color: transparent;
             border: none;
-            font-size: 1.2rem;
+            height: 32px;
+            width: 32px;
             cursor: pointer;
             outline: none;
         }
@@ -53,6 +60,9 @@
             }
         }
         .open-edit-label-btn {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin: 0 0 4px;
             width: 32px;
             height: 32px;
@@ -62,6 +72,7 @@
             cursor: pointer;
             border: none;
             &:hover {
+               
                 background-color: rgba(92, 107, 117, 0.212);
             }
         }
@@ -94,21 +105,28 @@
     box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
     text-decoration: none;
     .edit-label-header {
+        width: 100%;
         display: flex;
-        justify-content: space-between;
         border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
+        justify-content: space-around;
+        padding-block: 5px;
+        align-items: center;
         .title {
+            line-height: 0.9;
+            flex-grow: 1;
             color: #243757;
             font-size: 1.2rem;
-            padding-top: 0.5rem;
             text-align: center;
             flex-grow: 1;
         }
         .close-edit-label-btn {
+            margin: 0;
+            padding: 0;
             color: #233655;
             background-color: transparent;
             border: none;
-            font-size: 1.2rem;
+            height: 32px;
+            width: 32px;
             cursor: pointer;
             outline: none;
         }
