--- a/frontend/src/assets/styles/cmps/_taskPreview.scss
+++ b/frontend/src/assets/styles/cmps/_taskPreview.scss
@@ -5,7 +5,7 @@
     background-color: white;
     box-shadow: 0 1px 0 #091e4240;
     border-radius: 3px;
-    margin-bottom: 8px;
+    margin-bottom: 6px;
     min-height: 32px;
     cursor: pointer;
     justify-content: center;
@@ -32,10 +32,12 @@
         display: flex;
         flex-wrap: wrap;
         margin: 3px 0px 3px 6px;
+        > *:not(:first-child) {
+            margin-left: 3px;
+        }
         .label {
             font-size: 0.8rem;
             border-radius: 5px;
-            margin-inline: 3px;
             color: white;
             font-weight: 600;
             padding-inline: 5px;
@@ -43,7 +45,7 @@
     }
     a {
         text-decoration: none;
-        margin: 0 9px 4px;
+        margin: 0 6px 4px;
         h5 {
             font-weight: 400;
             color: #00395aec;
@@ -51,14 +53,14 @@
             margin: 0px 0px 0px 0px;
         }
         .badges {
-            display: flex;
+            display: grid;
             align-items: center;
-            justify-content: space-between;
-            margin-top: 7px;
-            margin-bottom: 3px;
-            >* {
+            margin-top: 3px;
+            margin-bottom: 0px;
+            grid-template-columns: 60px auto auto;
+            grid-template-rows: max-content;
+            > * {
                 color: #6d798e;
-                margin-right: 5px;
                 font-size: 12px;
                 height: fit-content;
             }
@@ -67,15 +69,32 @@
                 color: white;
                 border-radius: 3px;
                 padding: 1px 2px;
+                width: 60px;
+                display: flex;
+                justify-content: center;
                 align-items: center;
                 .clock {
                     width: 15px;
+                    margin-right: 2px;
                     align-self: baseline;
-                    margin-right: 3px;
+                }
+            }
+            .checklists-preview {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 3px;
+                padding: 1px 2px;
+                svg {
+                    width: 15px;
+                    align-self: baseline;
                 }
             }
             .avatars {
+                justify-self: end;
+                align-self: flex-end;
                 display: flex;
+                grid-column: 3/4;
                 .avatar {
                     justify-items: end;
                     width: 28px;
@@ -96,10 +115,10 @@
         position: absolute;
         background-color: rgba(255, 255, 255, 0.671);
         text-align: center;
-        padding:3px;
+        padding: 3px;
         top: 0;
         right: 0;
-        .task-options-svg{
+        .task-options-svg {
             display: flex;
             font-size: 1rem;
         }
