--- a/frontend/src/assets/styles/cmps/_labelEdit.scss
+++ b/frontend/src/assets/styles/cmps/_labelEdit.scss
@@ -57,6 +57,7 @@
             svg {
                 align-self: center;
                 justify-self: flex-end;
+                grid-column: 2/3;
             }
         }
         .open-edit-label-btn {
