--- a/frontend/src/assets/styles/main.scss
+++ b/frontend/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "cmps/sideBar";
 @import "cmps/bgPickList";
 @import "cmps/membersList";
+@import "cmps/addUsers";
 @import "cmps/boardHeader";
 @import "cmps/dates";
 //Pages
