--- a/frontend/src/assets/styles/cmps/_boardHeader.scss
+++ b/frontend/src/assets/styles/cmps/_boardHeader.scss
@@ -11,25 +11,26 @@
     font-size: 1.25rem;
     height: 32px;
     background-color: rgba(0, 0, 0, 0);
-        margin-top: 10px;
-        width: 100%;
-        
-        .header-options {
+    margin-top: 10px;
+    width: 100%;
+    z-index: 1;
+
+    .header-options {
         margin-top: 10px;
         display: grid;
         width: 100%;
         align-items: center;
         grid-template-columns: max-content max-content max-content auto;
-        .header-title{
+        .header-title {
             background-color: rgba(255, 255, 255, 0.39);
             border-radius: 5px;
-            padding: 0px 10px;     
-            width: 100%;   
+            padding: 0px 10px;
+            width: 100%;
         }
-        .header-stats{
+        .header-stats {
             background-color: rgba(255, 255, 255, 0.39);
             border-radius: 5px;
-            padding: 0px 10px;        
+            padding: 0px 10px;
         }
         .board-title-input {
             width: 150px;
@@ -54,7 +55,7 @@
             display: flex;
             height: 32px;
             width: max-content;
-            align-items:center ;
+            align-items: center;
             margin-left: 20px;
             > * {
                 height: 25px;
@@ -64,15 +65,15 @@
             > *:not(:first-child) {
                 margin-left: -7px;
             }
-            .add-member-avatar{
+            .add-member-avatar {
                 margin-left: -5px;
                 background-color: #0079bf;
                 display: flex;
-                svg{
+                svg {
                     height: 20px;
                     padding-right: 1.5px;
                 }
-                &:hover{
+                &:hover {
                     opacity: 0.8;
                 }
             }
@@ -84,7 +85,7 @@
             border-radius: 5px;
             justify-self: flex-end;
             align-items: center;
-            .path{
+            .path {
                 height: 100px;
             }
         }
