--- a/frontend/src/assets/styles/main.scss
+++ b/frontend/src/assets/styles/main.scss
@@ -23,6 +23,7 @@
 @import "cmps/addUsers";
 @import "cmps/boardHeader";
 @import "cmps/dates";
+@import "cmps/checklist";
 //Pages
 @import "pages/BoardDetails";
 @import "pages/BoardPage";
