--- a/frontend/src/assets/styles/main.scss
+++ b/frontend/src/assets/styles/main.scss
@@ -27,4 +27,5 @@
 @import "pages/BoardDetails";
 @import "pages/BoardPage";
 @import "pages/Home";
-@import "pages/LoginSignup"
+@import "pages/LoginSignup";
+@import "pages/BoardCharts"
