--- a/frontend/src/assets/styles/pages/_BoardCharts.scss
+++ b/frontend/src/assets/styles/pages/_BoardCharts.scss
@@ -1,3 +1,43 @@
-.board-charts{
-    background-color: #fff;
+.board-charts {
+    background-color: rgba(0, 0, 0, 0.849);
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 94px;
+    height: 80%;
+    width: 100%;
+    padding-inline: 100;
+    display: grid;
+    align-items: center;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 5% 80%;
+    color: white;
+    .header-title {
+        letter-spacing: 1.5px;
+        grid-row: 1/2;
+        grid-column: 1/3;
+        text-align: center;
+        font-size: 1.5rem;
+        text-decoration: underline;
+    }
+    .chart-container {
+        grid-row: 2/3;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        color: white;
+        height: 100%;
+        .title {
+            margin-bottom: 30px;
+            text-align: center;
+            width: 100%;
+            justify-self: start;
+            font-size: 1.1rem;
+        }
+        .chart {
+            height: 200px;
+        }
+    }
 }
